// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schedules controller should return all schedules 1`] = `
Object {
  "routes": Array [
    Object {
      "destinations": Array [
        "le-vesinet-le-pecq",
        "le-vesinet-centre",
        "chatou-croissy",
        "rueil-malmaison",
        "nanterre-ville",
        "nanterre-universite",
        "nanterre-prefecture",
        "la-defense",
        "charles-de-gaulle–etoile",
        "gare-d-auber",
        "châtelet–les-halles",
        "gare-de-lyon",
        "nation",
        "gare-de-vincennes",
        "val-de-fontenay",
        "neuilly-plaisance",
        "bry-sur-marne",
        "noisy-le-grand-mont-d-est",
        "noisy-champs",
        "noisiel",
        "lognes",
        "torcy",
        "bussy-saint-georges",
        "val-d-europe",
        "marne-la-vallee-chessy",
      ],
      "direction": "Marne-la-Vallée – Chessy",
      "station": Object {
        "code": "sgl",
        "name": "Saint-Germain-en-Laye",
      },
      "trains": Array [
        Object {
          "departureTime": "2020-03-10T09:24:00+01:00",
          "platform": "2",
        },
        Object {
          "departureTime": "2020-03-10T09:32:00+01:00",
          "platform": "4",
        },
        Object {
          "departureTime": "2020-03-10T09:43:00+01:00",
          "platform": "2",
        },
        Object {
          "departureTime": "2020-03-10T09:55:00+01:00",
          "platform": "4",
        },
        Object {
          "departureTime": "2020-03-10T10:05:00+01:00",
          "platform": "4",
        },
      ],
    },
    Object {
      "destinations": Array [
        "achères-ville",
        "conflans-fin-d-oise",
        "neuville-universite",
        "cergy-prefecture",
        "cergy-saint-christophe",
        "cergy-le-haut",
      ],
      "direction": "Cergy le Haut",
      "station": Object {
        "code": "ml",
        "name": "Maisons-Laffitte ",
      },
      "trains": Array [
        Object {
          "departureTime": "2020-03-10T09:26:00+01:00",
          "platform": "A",
        },
        Object {
          "departureTime": "2020-03-10T09:42:00+01:00",
          "platform": "B",
        },
        Object {
          "departureTime": "2020-03-10T09:57:00+01:00",
          "platform": "A",
        },
        Object {
          "departureTime": "2020-03-10T10:19:00+01:00",
          "platform": "A",
        },
      ],
    },
    Object {
      "destinations": Array [
        "maisons-laffitte",
        "sartrouville",
        "houilles-carrieres-sur-seine",
        "nanterre-prefecture",
        "la-defense",
        "charles-de-gaulle–etoile",
        "gare-d-auber",
        "châtelet–les-halles",
        "gare-de-lyon",
        "nation",
        "gare-de-vincennes",
        "val-de-fontenay",
        "neuilly-plaisance",
        "bry-sur-marne",
        "noisy-le-grand-mont-d-est",
        "noisy-champs",
        "noisiel",
        "lognes",
        "torcy",
        "bussy-saint-georges",
        "val-d-europe",
        "marne-la-vallee-chessy",
      ],
      "direction": "Marne-la-Vallée – Chessy",
      "station": Object {
        "code": "ml",
        "name": "Maisons-Laffitte ",
      },
      "trains": Array [
        Object {
          "departureTime": "2020-03-10T09:29:00+01:00",
          "platform": "B",
        },
        Object {
          "departureTime": "2020-03-10T09:40:00+01:00",
          "platform": "B",
        },
        Object {
          "departureTime": "2020-03-10T09:55:00+01:00",
          "platform": "B",
        },
        Object {
          "departureTime": "2020-03-10T10:09:00+01:00",
          "platform": "B",
        },
      ],
    },
  ],
}
`;

exports[`schedules controller should return schedules for a station 1`] = `
Object {
  "routes": Array [
    Object {
      "destinations": Array [
        "le-vesinet-le-pecq",
        "le-vesinet-centre",
        "chatou-croissy",
        "rueil-malmaison",
        "nanterre-ville",
        "nanterre-universite",
        "nanterre-prefecture",
        "la-defense",
        "charles-de-gaulle–etoile",
        "gare-d-auber",
        "châtelet–les-halles",
        "gare-de-lyon",
        "nation",
        "gare-de-vincennes",
        "val-de-fontenay",
        "neuilly-plaisance",
        "bry-sur-marne",
        "noisy-le-grand-mont-d-est",
        "noisy-champs",
        "noisiel",
        "lognes",
        "torcy",
        "bussy-saint-georges",
        "val-d-europe",
        "marne-la-vallee-chessy",
      ],
      "direction": "Marne-la-Vallée – Chessy",
      "station": Object {
        "code": "sgl",
        "name": "Saint-Germain-en-Laye",
      },
      "trains": Array [
        Object {
          "departureTime": "2020-03-10T09:24:00+01:00",
          "platform": "2",
        },
        Object {
          "departureTime": "2020-03-10T09:32:00+01:00",
          "platform": "4",
        },
        Object {
          "departureTime": "2020-03-10T09:43:00+01:00",
          "platform": "2",
        },
        Object {
          "departureTime": "2020-03-10T09:55:00+01:00",
          "platform": "4",
        },
        Object {
          "departureTime": "2020-03-10T10:05:00+01:00",
          "platform": "4",
        },
      ],
    },
  ],
}
`;

exports[`schedules controller should return schedules for a station/to 1`] = `
Object {
  "routes": Array [
    Object {
      "destinations": Array [
        "le-vesinet-le-pecq",
        "le-vesinet-centre",
        "chatou-croissy",
        "rueil-malmaison",
        "nanterre-ville",
        "nanterre-universite",
        "nanterre-prefecture",
        "la-defense",
        "charles-de-gaulle–etoile",
        "gare-d-auber",
        "châtelet–les-halles",
        "gare-de-lyon",
        "nation",
        "gare-de-vincennes",
        "val-de-fontenay",
        "neuilly-plaisance",
        "bry-sur-marne",
        "noisy-le-grand-mont-d-est",
        "noisy-champs",
        "noisiel",
        "lognes",
        "torcy",
        "bussy-saint-georges",
        "val-d-europe",
        "marne-la-vallee-chessy",
      ],
      "direction": "Marne-la-Vallée – Chessy",
      "station": Object {
        "code": "sgl",
        "name": "Saint-Germain-en-Laye",
      },
      "trains": Array [
        Object {
          "departureTime": "2020-03-10T09:24:00+01:00",
          "platform": "2",
        },
        Object {
          "departureTime": "2020-03-10T09:32:00+01:00",
          "platform": "4",
        },
        Object {
          "departureTime": "2020-03-10T09:43:00+01:00",
          "platform": "2",
        },
        Object {
          "departureTime": "2020-03-10T09:55:00+01:00",
          "platform": "4",
        },
        Object {
          "departureTime": "2020-03-10T10:05:00+01:00",
          "platform": "4",
        },
      ],
    },
  ],
}
`;
